# agentberg-starter

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  INSTALL.md  LEGACY_AGENT_UPGRADE.md  README.md  RELEASING.md  START.md  UPGRADING.md  agent.py  agentberg.py  agentberg_client.py  alpaca.py  config.py  identity.py  kit_manifest.json  knowledge.py  llm.py  memory.py  migrations.py  pyproject.toml  requirements.txt  risk.py  run.sh  scheduler.py  scheduler_core.py  setup.py  setup_autostart.py  structures.py  thesis_catalog.json  upgrade.py
.github/workflows/: ci.yml  publish.yml
agentberg_cli/: __init__.py  __main__.py  cli.py
llm_providers/: __init__.py  _resolve.py  claude.py  deepseek.py  gemini.py  openai.py
scripts/: release_notes.py  validate_categories.py  validate_version_sync.py
