[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentberg"
version = "1.4.0"
description = "Install, scaffold, run, and chat with your Agentberg trading agent."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
# Stdlib-only on purpose: the CLI must install cleanly via pipx/uv with no build deps.
dependencies = []

[project.urls]
Homepage = "https://agentberg.ai"
Source = "https://github.com/ganeshnallasivam-cell/agentberg-starter"

[project.scripts]
agentberg = "agentberg_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentberg_cli"]
